...
    }

    var body: some View {
        ScrollView {
            VStack(alignment: .leading, spacing: 20) {
                HStack {
                    Text("Schedule Name:").fontWeight(.medium)
                    Text(schedule.name).fontWeight(.bold)
                }

                if !schedule.shifts.isEmpty {
                    Text("Statistics").font(.headline)

...
                .clipShape(RoundedRectangle(cornerRadius: 10))
        }
    }

    private var exportShiftsButton: some View {
        Button(action: { router.push(.exportShifts(schedule.id)) }) {
            Label("Export Shifts", systemImage: "calendar.badge.clock")
                .frame(maxWidth: .infinity)
                .padding()
                .background(Color.purple)
                .foregroundColor(.white)
                .clipShape(RoundedRectangle(cornerRadius: 10))
        }
...
